--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "istanbul": "^0.4.5"
+    "glob": "latest",
+    "istanbul": "^0.4.5",
+    "sinon": "^3.2.0",
+    "sinon-helpers": "^1.7.4"
   }
 }
