--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "stream"
   ],
   "author": "Josh Leder <josh@ha.cr>",
-  "license": "BSD-3-Clause",
+  "license": "MIT",
   "engines": {
     "node": ">=6.0"
   },
